cmake_minimum_required(VERSION 3.7)
project(TP_n_2_Qt)

set(CMAKE_CXX_STANDARD 14)

add_executable(TP_n_2_Qt main.cpp SQLClientWindow.cpp SQLClientWindow.h ButtonsPanel.cpp ButtonsPanel.h ConfigurationDialog.cpp ConfigurationDialog.h LabeledTextField.cpp LabeledTextField.h MainWindow.cpp MainWindow.h Window.cpp Window.h)